spacing on mobile fixed

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -2,6 +2,8 @@
 
 .home {
 
+
+
   .intro {
 
     h2 {
@@ -10,6 +12,12 @@
 
     p {
       padding:0 15px;
+    }
+
+    img{
+      @media @mobile{
+        width:100%;
+      }
     }
   
   }
